--- a/debut_jeu.html
+++ b/debut_jeu.html
@@ -4,7 +4,7 @@
 <head>
     <title>Ma boulangerie</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="TD3.2.css" />
+    <link rel="stylesheet" type="text/css" href="boulangerie.css" />
     <script type="text/javascript" src="./boulangerie.js"> </script>
     <meta name="author" content="Eloïse DELHOMELLE">
     <meta name="description" content="TD2">
@@ -12,13 +12,20 @@
 </head>
 
 <body onload="init()">
+<div id="result"></div>
 
+<script>
+    // Check browser support
+    if (typeof(Storage) !== "undefined") {
+        // Store
+        localStorage.setItem("lastname", "Smith");
+        // Retrieve
+        document.getElementById("result").innerHTML = localStorage.getItem("lastname");
+    } else {
+        document.getElementById("result").innerHTML = "Sorry, your browser does not support Web Storage...";
+    }
+</script>
 
-
-    <div id="fond_boulang"></div>
-    <div id="chat"></div>
-
-    <img src="./image/fond_boulangerie.png" alt="HTML5 Icon" style="width:128px;height:128px;">
 </body>
 
 </html>
