--- a/caisse.html
+++ b/caisse.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<img src="./image/caisse.png" style="
-width: 20em">
+<img src="./image/chien.PNG" style="width: 20em">
+<img src="./image/chien.PNG" style="width: 20em">
+
+<img src="./image/caisse.PNG" style="width: 30em">
+<img src="./image/chat.png" style="width: 20em">
 </body>
 </html>
