--- a/creerPartie.html
+++ b/creerPartie.html
@@ -49,5 +49,10 @@
     }
 
 </script>
-
+<script>
+let objJson = {
+niveau : 0}
+let objLinea = JSON.stringify(objJson);
+localStorage.setItem("joueur",objLinea);
+</script>
 </html>
