--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
 </head>
 <body>
-<div style="display: block; margin : auto;margin-top:1em;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">MY BAKERY</div>
-<div id="body_bky">
-   <a href="creerPartie.html" style="display: block; width : 20em; margin : auto;margin-bottom: 1em;text-align: center; padding:2em 1em 2em 1em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">CREER UNE NOUVELLE PARTIE</a>
-    <a href="creerPartie.html" style="display: block; width : 20em; margin : auto;margin-bottom: 1em;text-align: center; padding:2em 1em 2em 1em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">LANCER UNE PARTIE</a>
-</div>
-
-
 </body>
+<script>
+    if (localStorage.length == 0){
+location="init.html";
+    } else {
+        location="init2.html";
+
+    }
+</script>
 </html>
