--- a/jeu_caisse.html
+++ b/jeu_caisse.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>oui</title>
 </head>
 <body>
-$END$
+<script src="http://code.jquery.com/jquery-1.11.0.js"></script>
+<script>$.getJSON('articles.json', function (data) {
+console.log('ok');
+})</script>
 </body>
 </html>
