--- a/caisse.html
+++ b/caisse.html
@@ -12,10 +12,35 @@
 </body>
 
 <script>
+    alert(localStorage.getItem("niveau"));
+    var requestURL = 'https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js';
+   $.getJSON('config_jeu.json', function(data)){
+       console.log("ok");
+    }
+
+    request.onload = function() {
+        var evolution = request.response;
+        getNiveau(evolution);
+        getproduits(evolution);
+    }
+
+
+    const niveau = localStorage.getItem("niveau");
+    switch (niveau) {
+    }
+
+    function getniveau(jsonObj) {
+        var niveau_joueur = jsonObj['niveau'];
+        return niveau_joueur
+    }
+    function getproduits(jsonObj){
+        var produits_joueur = jsonObj['produits'];
+        return produits_joueur;
+    }
 
     choixProduit();
     function choixProduit(){
-        console.log("oui");
+        /*console.log("oui");
         console.log(localStorage);
         const joueur = JSON.parse(localStorage.getItem("joueur"));
         console.log(joueur.produits);
@@ -24,8 +49,9 @@
 
 
         res = Math.floor(Math.random() * (nb - 1 + 1)) + 1;
-        console.log(res);
+        console.log(res);*/
     }
+
 </script>
 
 </html>
