--- a/caisse.html
+++ b/caisse.html
@@ -6,19 +6,20 @@
 
 </head>
 <body>
-
-<div id="bulle" style="position: relative;    right:50px;    background-color:white;    text-align:center;    width:500px;    height:250px;    border:2px solid #555555;border-top-right-radius:80px 40px;border-top-left-radius:80px 40px;border-bottom-right-radius:80px 40px;border-bottom-left-radius:80px 40px;margin-left: 10em;">
-    <span id="output" style=" font-family: ComicFighter, Georgia; /* on spécifie une autre police standard, au cas où... */ font-weight:bold;font-size:3em;position:relative;top:26px;"></span>
-    <span id="arrow_border" style="width: 0;height: 0;line-height: 0;border-bottom:0px solid transparent;border-left:30px solid transparent;border-right:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-30px;left:65px;"></span>
-    <span id="arrow_inner" style="width: 0;height: 0;line-height: 0;border-bottom:30px solid transparent;border-right:30px solid transparent;border-left:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-25px;left:67px;"></span>
+<div style="float: left; margin-top: 10%">
+    <div id="bulle" style="position: relative;right:50px;background-color:white;text-align:center;width:500px;height:250px;    border:2px solid #555555;border-top-right-radius:80px 40px;border-top-left-radius:80px 40px;border-bottom-right-radius:80px 40px;border-bottom-left-radius:80px 40px;margin-left: 5em;">
+        <span id="output" style=" font-family: ComicFighter, Georgia; /* on spécifie une autre police standard, au cas où... */ font-weight:bold;font-size:3em;position:relative;top:26px;"></span>
+        <span id="arrow_border" style="width: 0;height: 0;line-height: 0;border-bottom:0px solid transparent;border-left:30px solid transparent;border-right:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-30px;left:65px;"></span>
+        <span id="arrow_inner" style="width: 0;height: 0;line-height: 0;border-bottom:30px solid transparent;border-right:30px solid transparent;border-left:30px solid #555555; /* couleur de la bordure de la bulle */position:absolute;bottom:-25px;left:67px;"></span>
+    </div>
+    <img src="./image/chien.PNG" style="width: 15em; margin-left: 5em;">
+    <img src="./image/caisse.PNG" style="width: 20em">
+    <img src="./image/chat.png" style="width: 15em">
 </div>
-<img src="./image/chien.PNG" style="width: 10em; margin-left: 10em;">
 
-<img src="./image/caisse.PNG" style="width: 15em">
-<img src="./image/chat.png" style="width: 10em">
-<div style="background-color: orangered; padding: 1em; width: 50%; display:block; margin: auto; ">
+<div style="background-color: orangered; width: 50%; float: right">
 <span id="calcul" style=" display:block; margin: auto; margin-top: 0.5em; text-align: center; font-family: ComicFighter, Georgia; font-weight:bold;font-size:3em; "></span>
-<input type="text" id="resultat" style="display: block; margin : auto; margin-bottom: 0.5em;font-size: 3em; ">
+<input type="text" id="resultat" style="display: block; margin : auto;margin-top: 0.5em; margin-bottom: 0.5em;font-size: 3em; ">
 <input type="submit" id="verif" style="display: block; margin : auto; margin-bottom:1em;font-size: 3em; ">
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
