--- a/caisse.html
+++ b/caisse.html
@@ -134,52 +134,8 @@
                     calcul.innerHTML += `${message_calcul} =<br />`;
                 }
 
-
-
-
-
-
-
-                if (index!=index){
-                    /*console.log(index);
-                    console.log(data);
-                    console.log(value.produit);
-                    console.log(value.produit.length);*/
-
-                    //on récupère la liste des produits (tupples) disponibles au niveau du joueur:
-                    liste_produits = value.produit;
-                    //console.log(liste_produits);
-                    //on récupère les clés (=nom de chaque produit)
-                    keys = Object.keys(liste_produits[0]);
-                    //on calcule le nombre de produit (nombre de clés)
-                    nombre_produits=keys.length;
-                    // console.log(nombre_produits);
-                    //on choisit un entier au hasard parmis le nombre de produit
-                    nb_random =     Math.floor(Math.random() * Math.floor(nombre_produits));
-                    // console.log(nb_random);
-                    //on affiche la clé (=nom produit)
-                    nom_produit = keys[nb_random];
-                    console.log(nom_produit);
-                    //on affiche la valeur de la clé (=prix produit)
-                    values = Object.values(liste_produits[0]);
-                    prix_produit = values[nb_random];
-                    console.log(prix_produit);
-
-                    //le client choisit le nombre de fois qu'il veut ce produit
-                    recur_produit =     Math.floor(Math.random() * (3 - 1 + 1)) + 1;
-
-                    //bulle client
-                    const output = document.getElementById("output");
-                    output.innerHTML += `Bonjour, ${recur_produit} ${nom_produit} s'il-vous-plaît<br />`;
-
-                    //affichage calcul à faire en bas à droite
-                    const calcul = document.getElementById("calcul");
-                    calcul.innerHTML += `${recur_produit} * ${prix_produit} =<br />`;
-
-                    //calcul du résultat attendu
-                    bon_resultat = recur_produit * prix_produit;
-
-                    //vérification du résultat donné par le joueur
+                bon_resultat = resultat_calcul;
+                 //vérification du résultat donné par le joueur
                     document.getElementById('verif').onclick = function(e) {
                         const resultat = document.getElementById("resultat").value;
                         if(resultat==bon_resultat){
@@ -232,7 +188,7 @@
                             }
                         }      }
 
-                }
+
             })
         }
     })
