--- a/caisse.html
+++ b/caisse.html
@@ -53,7 +53,7 @@
                 message_calcul = '';
                 resultat_calcul = 0;
 
-                if (index==6) {
+                if (index==8) {
                     if (index <= 3){
                         for (i = 0; i <= index ; i++){
                             nom_produit = keys[i];
@@ -76,7 +76,8 @@
                             console.log(resultat_calcul);
                         }
                     }
-                    else{
+                    if (index <5) {
+                        console.log("<<<<<<<<<<<<<<<<<<5")
                         //console.log(keys);
                         //on sélectionne 3 produits au hasard
                         //1) on créer une liste de taille = nb produits dispos : 1, 2, 3, 4, 5...
@@ -105,6 +106,70 @@
                             console.log(nom_produit+" "+prix_produit);
                             //le client choisit le nombre de fois qu'il veut ce produit
                             recur_produit = Math.floor(Math.random() * (10 - 1 + 1)) + 1;
+
+                            if (i == 0){
+                                message_client = "Bonjour, j'aimerais " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
+                                message_calcul = recur_produit + "*" + prix_produit;
+                                resultat_calcul = recur_produit * prix_produit;
+                            }
+                            else {
+                                message_client += ", <br />" + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
+                                message_calcul += "<br /> + <br />" + recur_produit + "*" + prix_produit;
+                                resultat_calcul += recur_produit * prix_produit;
+                            }
+                            console.log(message_client);
+                            console.log(message_calcul);
+                            console.log(resultat_calcul);
+                        }
+
+                    }
+                    else {
+                        console.log(">>>>>>>>>>>>>>>>>5");
+                        //console.log(keys);
+                        //on sélectionne 3 produits au hasard
+                        //1) on créer une liste de taille = nb produits dispos : 1, 2, 3, 4, 5...
+                        //2) mélanger la liste : 2, 5, 1, 4, 3...
+
+                        tab = new Array();
+                        nom_produits = new Array();
+                        prix_produits = new Array();
+
+                        for (i = 0; i < keys.length; i++){
+                            tab[i]=i;
+                            //console.log(tab[i]);
+                        }
+                        tab = shuffle(tab);
+                        for (i = 0; i < keys.length; i++){
+                            // console.log("nb "+tab[i]);
+                            nom_produits[i]=keys[tab[i]];
+                            prix_produits[i]=values[tab[i]];
+                            //console.log(nom_produits[i]+" "+prix_produits[i]);
+                        }
+                        max = 3;
+                        switch (index) {
+                            case 5:
+                                max = 2;
+                                recur_produit = 1;
+                                break;
+                            case 6 :
+                                max = 3;
+                                recur_produit = 1;
+                                break;
+                            case 7 :
+                                max = 2;
+                                recur_produit = Math.floor(Math.random() * (2 - 1 + 1)) + 1;
+                                break;
+                            case 8 :
+                                max = 3;
+                                recur_produit = Math.floor(Math.random() * (2 - 1 + 1)) + 1;
+                                break;
+                        }
+
+                        //on récupère les "max" premiers produits
+                        for (i = 0; i <max ; i++){
+                            nom_produit = keys[tab[i]];
+                            prix_produit = values[tab[i]];
+                            console.log(nom_produit+" "+prix_produit);
 
                             if (i == 0){
                                 message_client = "Bonjour, j'aimerais " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
